--- a/project/static/css/activities_page.css
+++ b/project/static/css/activities_page.css
@@ -12,7 +12,7 @@
 .head1 h1 {
   font-size: 5vh;
   font-weight: bolder;
-  color: #E5D9B6;
+  color: #FCF5E5;
 }
 .head1 h1:hover {
   transform: scale(1.2)
