--- a/project/templates/aboutus.html
+++ b/project/templates/aboutus.html
@@ -60,7 +60,7 @@
                 Founder of Eco Smart Vietnam - Mr Bui Dinh Tri
               </figcaption>
             </figure>
-            <p>
+            <p class = "statementfromTri">
               To form and develop a project, the contribution of the chairman is
               extremely important. Today, let's follow us to learn about the
               leader of Eco Smart Vietnam - Mr. Bui Dinh Tri through the small
@@ -71,7 +71,7 @@
               Question 1: Introduce yourself and tell 3 interesting things about
               yourself.
             </p>
-            <p>
+            <p class = "answer">
               Mr. Tri: I am currently an overseas student studying 2 majors:
               Computer Science and Economics in the US. Three interesting things
               about me are probably that I am left-handed, high-dose (but
@@ -81,7 +81,7 @@
               Question 2: Mr Tri, what was the fate that motivated you to found
               Eco Smart Vietnam?
             </p>
-            <p>
+            <p class ="answer">
               Mr. Tri: The charm probably stems from my participation in one of
               the annual activities of my school's Young Entrepreneurs and
               Entrepreneurship Support Center, it is the Macalester
@@ -95,7 +95,7 @@
               Question 3: Could you share a little about the goals and
               expectations that you set at Eco Smart Vietnam in the future?
             </p>
-            <p>
+            <p class = "answer">
               Mr. Tri: As I share, I am a high-dose blood person but in control,
               so I set goals/expectations that often balance between far-fetched
               and realistic. I really expect Eco Smart Vietnam to become one of
@@ -108,7 +108,7 @@
               Question 4: Do you have anything to say to readers and followers
               of the project?
             </p>
-            <p>
+            <p class ="answer">
               Mr. Tri: My message is: "Eco Smart Vietnam will be a project that
               will not let followers and expectations down because with the Eco
               Smart team - the team I believe is full of talented and
