add gaps and hr to text

--- a/project/templates/aboutus.html
+++ b/project/templates/aboutus.html
@@ -48,7 +48,7 @@
           {% include 'ourteam.html' %}
           <h2 class="head2ourteam">The Story of Eco Smart Vietnam</h2>
           <!-- Founder Content -->
-          <div>
+          <div class="interview">
             <figure>
               <img
                 class="caption rounded"
@@ -60,6 +60,7 @@
                 Founder of Eco Smart Vietnam - Mr Bui Dinh Tri
               </figcaption>
             </figure>
+            <hr class="aboutus-hr">
             <p class = "statementfromTri">
               To form and develop a project, the contribution of the chairman is
               extremely important. Today, let's follow us to learn about the
@@ -118,6 +119,7 @@
               we set out: Acting for the development and safety of the
               environment in Vietnam!”
             </p>
+            <hr>
           </div>
         </div>
       </div>
