--- a/project/templates/product.html
+++ b/project/templates/product.html
@@ -17,15 +17,14 @@
 <body>
     {% include 'navbar.html' %}
     <div class="bodystyle">
-        <div id="head1">
-          <h1 id="head1-h1">Product</h1>
+        <div class="head1">
+          <h1>Products</h1>
         </div>
 <div class="menu">
         
     <div class="product-items">
         <a href="https://www.facebook.com/ecosmartvietnam/posts/pfbid02U99KPaWdwtcz2oXaupBDeBUrLfFGcVJsjvMzks1MeV6eNgZ3A5YqZUoXzpSaezCzl">
-            <img src="https://scontent.fhan14-1.fna.fbcdn.net/v/t39.30808-6/326852459_882691219733757_227680497051050728_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=_6bHLTumLFAAX-xNL_T&_nc_ht=scontent.fhan14-1.fna&oh=00_AfD6NgGicjmY2aHnvHckXRAq0yZT34S08eXnZI6SQjKAkA&oe=63EDA770
-            " alt=""></a>
+            <img src="{{ url_for('static', filename='img/products/product_page_5.jpg') }}"alt=""></a>
         <div class="details">
             <div class="details-sub">
                 <h3 class="product-name"> Product 1</h3>
@@ -41,8 +40,7 @@
        
     <div class="product-items">
         <a href="https://www.facebook.com/ecosmartvietnam/posts/pfbid02U99KPaWdwtcz2oXaupBDeBUrLfFGcVJsjvMzks1MeV6eNgZ3A5YqZUoXzpSaezCzl">
-            <img src="https://scontent.fhan14-1.fna.fbcdn.net/v/t39.30808-6/326852459_882691219733757_227680497051050728_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=_6bHLTumLFAAX-xNL_T&_nc_ht=scontent.fhan14-1.fna&oh=00_AfD6NgGicjmY2aHnvHckXRAq0yZT34S08eXnZI6SQjKAkA&oe=63EDA770
-            " alt=""></a>
+            <img src="{{ url_for('static', filename='img/products/product_page_4.jpg') }}" alt=""></a>
         <div class="details">
             <div class="details-sub">
                 <h3 class="product-name"> Product 2</h3>
@@ -57,8 +55,7 @@
     </div>        
     <div class="product-items">
         <a href="https://www.facebook.com/ecosmartvietnam/posts/pfbid02U99KPaWdwtcz2oXaupBDeBUrLfFGcVJsjvMzks1MeV6eNgZ3A5YqZUoXzpSaezCzl">
-            <img src="https://scontent.fhan14-1.fna.fbcdn.net/v/t39.30808-6/326852459_882691219733757_227680497051050728_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=_6bHLTumLFAAX-xNL_T&_nc_ht=scontent.fhan14-1.fna&oh=00_AfD6NgGicjmY2aHnvHckXRAq0yZT34S08eXnZI6SQjKAkA&oe=63EDA770
-            " alt=""></a>
+            <img src="{{ url_for('static', filename='img/products/product_page_3.jpg') }}" alt=""></a>
         <div class="details">
             <div class="details-sub">
                 <h3 class="product-name"> Product 3</h3>
@@ -73,8 +70,7 @@
     </div>        
     <div class="product-items">
         <a href="https://www.facebook.com/ecosmartvietnam/posts/pfbid02U99KPaWdwtcz2oXaupBDeBUrLfFGcVJsjvMzks1MeV6eNgZ3A5YqZUoXzpSaezCzl">
-            <img src="https://scontent.fhan14-1.fna.fbcdn.net/v/t39.30808-6/326852459_882691219733757_227680497051050728_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=_6bHLTumLFAAX-xNL_T&_nc_ht=scontent.fhan14-1.fna&oh=00_AfD6NgGicjmY2aHnvHckXRAq0yZT34S08eXnZI6SQjKAkA&oe=63EDA770
-            " alt=""></a>
+            <img src="{{ url_for('static', filename='img/products/product_page_2.jpg') }}"alt=""></a>
         <div class="details">
             <div class="details-sub">
                 <h3 class="product-name"> Product 4</h3>
@@ -89,8 +85,7 @@
     </div>        
     <div class="product-items">
         <a href="https://www.facebook.com/ecosmartvietnam/posts/pfbid02U99KPaWdwtcz2oXaupBDeBUrLfFGcVJsjvMzks1MeV6eNgZ3A5YqZUoXzpSaezCzl">
-            <img src="https://scontent.fhan14-1.fna.fbcdn.net/v/t39.30808-6/326852459_882691219733757_227680497051050728_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=_6bHLTumLFAAX-xNL_T&_nc_ht=scontent.fhan14-1.fna&oh=00_AfD6NgGicjmY2aHnvHckXRAq0yZT34S08eXnZI6SQjKAkA&oe=63EDA770
-            " alt=""></a>
+            <img src="{{ url_for('static', filename='img/products/product_page_1.jpg') }}"alt=""></a>
         <div class="details">
             <div class="details-sub">
                 <h3 class="product-name"> Product 5</h3>
@@ -112,8 +107,7 @@
         <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"/>
       </svg>
 
-    <img src="https://scontent.fhan14-1.fna.fbcdn.net/v/t39.30808-6/326852459_882691219733757_227680497051050728_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=_6bHLTumLFAAX-xNL_T&_nc_ht=scontent.fhan14-1.fna&oh=00_AfD6NgGicjmY2aHnvHckXRAq0yZT34S08eXnZI6SQjKAkA&oe=63EDA770
-        " alt="">
+    <img src="{{ url_for('static', filename='img/products/product_page_5.jpg') }}"alt="">
     <div class="pop-up-details-sub">
         
         <h3 class="pop-up-product-sub-name"> Product 1</h3>
@@ -137,8 +131,7 @@
         <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"/>
       </svg>
 
-    <img src="https://scontent.fhan14-1.fna.fbcdn.net/v/t39.30808-6/326852459_882691219733757_227680497051050728_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=_6bHLTumLFAAX-xNL_T&_nc_ht=scontent.fhan14-1.fna&oh=00_AfD6NgGicjmY2aHnvHckXRAq0yZT34S08eXnZI6SQjKAkA&oe=63EDA770
-        " alt="">
+    <img src="{{ url_for('static', filename='img/products/product_page_4.jpg') }}" alt="">
     <div class="pop-up-details-sub">
         
         <h3 class="pop-up-product-sub-name"> Product 2</h3>
@@ -162,8 +155,7 @@
         <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"/>
       </svg>
 
-    <img src="https://scontent.fhan14-1.fna.fbcdn.net/v/t39.30808-6/326852459_882691219733757_227680497051050728_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=_6bHLTumLFAAX-xNL_T&_nc_ht=scontent.fhan14-1.fna&oh=00_AfD6NgGicjmY2aHnvHckXRAq0yZT34S08eXnZI6SQjKAkA&oe=63EDA770
-        " alt="">
+    <img src="{{ url_for('static', filename='img/products/product_page_3.jpg') }}"alt="">
     <div class="pop-up-details-sub">
         
         <h3 class="pop-up-product-sub-name"> Product 3</h3>
@@ -186,8 +178,7 @@
         <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"/>
       </svg>
 
-    <img src="https://scontent.fhan14-1.fna.fbcdn.net/v/t39.30808-6/326852459_882691219733757_227680497051050728_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=_6bHLTumLFAAX-xNL_T&_nc_ht=scontent.fhan14-1.fna&oh=00_AfD6NgGicjmY2aHnvHckXRAq0yZT34S08eXnZI6SQjKAkA&oe=63EDA770
-        " alt="">
+    <img src="{{ url_for('static', filename='img/products/product_page_2.jpg') }}" alt="">
     <div class="pop-up-details-sub">
         
         <h3 class="pop-up-product-sub-name"> Product 4</h3>
@@ -210,8 +201,7 @@
         <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"/>
       </svg>
 
-    <img src="https://scontent.fhan14-1.fna.fbcdn.net/v/t39.30808-6/326852459_882691219733757_227680497051050728_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=_6bHLTumLFAAX-xNL_T&_nc_ht=scontent.fhan14-1.fna&oh=00_AfD6NgGicjmY2aHnvHckXRAq0yZT34S08eXnZI6SQjKAkA&oe=63EDA770
-        " alt="">
+    <img src="{{ url_for('static', filename='img/products/product_page_1.jpg') }}" alt="">
     <div class="pop-up-details-sub">
         
         <h3 class="pop-up-product-sub-name"> Product 5</h3>
