--- a/project/templates/product.html
+++ b/project/templates/product.html
@@ -253,6 +253,7 @@ function closePopup5(){
 popup5.classList.remove("open-popup");}
 
 </script>
+<a href="cart.html"><button>Cart</button></a>
 {% include 'footer1.html' %}
 </body>
 </html>
