Changing font, update new sponsor section, translate into vietnamese homepage

--- a/project/templates/aboutus_content.html
+++ b/project/templates/aboutus_content.html
@@ -21,16 +21,16 @@
           />
         </video>
         <div class="all_text">
-          <h2 id="title">About Eco Smart Vietnam</h2>
+          <h2 id="title">Về Eco Smart Vietnam</h2>
           <hr class="seperate" />
           <div id="detailtext">
             <h5 class="text1">
-              In 2022-2024, Eco Smart Vietnam operates with the vision of
-              becoming one of the leading active student organizations in the
-              North acting for the environment. In particular, ESV is a pioneer
-              in promoting the development of environmentally friendly products.
+              Giai đoạn 2022-2024, Eco Smart Việt Nam hoạt động với tầm nhìn
+              trở thành một trong những tổ chức sinh viên tích cực hành động vì
+              môi trường hàng đầu miền Bắc. Đặc biệt, ESV là đơn vị tiên phong thúc đẩy phát 
+              triển các sản phẩm thân thiện với môi trường.
             </h5>
-            <a href="/about-us/" class="text2">Read More</a>
+            <a href="/about-us/" class="text2">Đọc thêm</a>
           </div>
         </div>
       </div>
