--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -6,12 +6,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Heebo&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&family=Roboto&display=swap" rel="stylesheet">
 
     <title>Eco Smart Vietnam</title>
     <link
@@ -26,7 +23,7 @@
     {% include 'navbar.html' %}
 
     <!-- include body.html here -->
-    {% include 'scrolling.html' %} {% include 'slideshow.html' %} {% include
+    {% include 'scrolling.html' %}{% include 'sponsor.html' %}{% include 'slideshow.html' %} {% include
     'productfeature.html' %}{% include 'video.html' %}
     <div>{% include 'aboutus_content.html' %}</div>
     {% include 'footer1.html' %}
