--- a/project/templates/productfeature.html
+++ b/project/templates/productfeature.html
@@ -32,7 +32,7 @@
   </head>
 
   <body>
-    <h1 class="h1ofslideshow">Products</h1>
+    <h1 class="h1ofslideshow">Sản phẩm nổi bật<table></table></h1>
     <div class="container-fluid my-5" id="container-product">
       <div class="row">
         <div class="col-12 m-auto">
@@ -81,7 +81,7 @@
         </div>
       </div>
     </div>
-    <a href="/product/" class="seemoreofproduct">See More</a>
+    <a href="/product/" class="seemoreofproduct">Xem thêm</a>
 
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
 
