--- a/project/templates/scrolling.html
+++ b/project/templates/scrolling.html
@@ -29,11 +29,11 @@
         <h2 class="heading2">Eco - Aware - Act</h2>
 
         <p>
-          A pioneer in promoting the development of <br />
-          environmentally friendly products.
+         Tiên phong trong việc thúc đẩy sự phát triển <br />
+          sản phẩm thân thiện môi trường.
         </p>
 
-        <a class="button-scroll" href="#aboutus-scroll">Read more</a>
+        <a class="button-scroll" href="#aboutus-scroll">Đọc thêm</a>
       </div>
     </div>
   </body>
