--- a/project/templates/slideshow.html
+++ b/project/templates/slideshow.html
@@ -32,7 +32,7 @@
   </head>
 
   <body>
-    <h1 class="h1ofslideshow">Environmental Facts</h1>
+    <h1 class="h1ofslideshow">Những sự thật về môi trường</h1>
     <div class="container-fluid my-5" id="container-slideshow">
       <div class="row">
         <div class="col-12 m-auto">
