set autoplay to slider

--- a/project/templates/slideshow.html
+++ b/project/templates/slideshow.html
@@ -145,6 +145,9 @@
         loop: true,
         margin: 15,
         nav: true,
+        autoplay:true,
+        autoplayTimeout:3000,
+        autoplayHoverPause:true,
         responsive: {
           0: {
             items: 1,
