change logo in homepage, and web browser icon

--- a/project/templates/contactus.html
+++ b/project/templates/contactus.html
@@ -7,7 +7,7 @@
     <title>Contact Us</title>
     <link
       rel="icon"
-      href="{{ url_for('static', filename='img/aboutus/logo.png') }}"
+      href="{{ url_for('static', filename='img/aboutus/logo2.png') }}"
       type="image/x-icon"
     />
 
