--- a/project/templates/activities/page4.html
+++ b/project/templates/activities/page4.html
@@ -14,7 +14,7 @@
     <title>Activities</title>
     <link
       rel="icon"
-      href="{{ url_for('static', filename='img/aboutus/logo.png') }}"
+      href="{{ url_for('static', filename='img/aboutus/logo2.png') }}"
       type="image/x-icon"
     />
 
