--- a/project/templates/footer1.html
+++ b/project/templates/footer1.html
@@ -31,14 +31,14 @@
   <div class="footer-bottom">
     <div class="footer-flex-item">
       <p class="copyright-text">
-        Copyright &copy; <a class="footer-link" href="#">ecosmartvietnam</a>
+        Bản quyền thuộc về &copy; <a class="footer-link" href="#">ecosmartvietnam</a>
       </p>
     </div>
     <div class="footer-flex-item">
       <div class="footer-menu">
-        <p><a class="footer-link" href="">Home</a></p>
-        <p><a class="footer-link" href="">About</a></p>
-        <p><a class="footer-link" href="">Contact</a></p>
+        <p><a class="footer-link" href="">Trang Chủ</a></p>
+        <p><a class="footer-link" href="">Về Chúng Tôi</a></p>
+        <p><a class="footer-link" href="">Liên Hệ</a></p>
       </div>
     </div>
   </div>
