--- a/project/templates/ourteam.html
+++ b/project/templates/ourteam.html
@@ -18,9 +18,9 @@
                 <div class="img-container">
                     <img src="{{ url_for('static', filename='img/aboutus/coo.jpg') }}" alt="Miss Do Pham Chau Giang - Lead of HR">
                 </div>
-                <h3>Nguyen Viet Hoan</h3>
-                <p>Chief Operative Officer</p>
-                <div class="personaldetail">Personal Detail</div>
+                <h3>Nguyễn Việt Hoàn</h3>
+                <p>Giám đốc điều hành</p>
+                <div class="personaldetail">Thông tin cá nhân</div>
                 <div class="icons"></div>
             </div>
         
@@ -29,9 +29,9 @@
                 <div class="img-container">
                     <img src="{{ url_for('static', filename='img/aboutus/president.jpg') }}" alt="Mr Bui Dinh Tri - Founder">
                 </div>
-                <h3>Bui Dinh Tri</h3>
-                <p>Chief Executive Officer</p>
-                <div class="personaldetail">Personal Detail</div>
+                <h3>Bùi Đình Trí</h3>
+                <p>Tổng giám đốc</p>
+                <div class="personaldetail">Thông tin cá nhân</div>
             </div>
 
             <!--Kim Ngan-->
@@ -39,9 +39,9 @@
                 <div class="img-container">
                     <img src="{{ url_for('static', filename='img/aboutus/cco.jpg') }}" alt="Miss Do Pham Chau Giang - Lead of HR">
                 </div>
-                <h3>Nguyen Kim Ngan</h3>
-                <p>Chief Creative Officer</p>
-                <div class="personaldetail">Personal Detail</div>
+                <h3>Nguyễn Kim Ngân</h3>
+                <p>Giám đốc sáng tạo</p>
+                <div class="personaldetail">Thông tin cá nhân</div>
                 <div class="icons"></div>
             </div>
         </div>
@@ -52,9 +52,9 @@
                 <div class="img-container">
                     <img src="{{ url_for('static', filename='img/aboutus/advisorrd.jpg') }}" alt="Mr Dam Quang Trung - Lead of R&D">
                 </div>
-                <h3>Dam Quang Trung</h3>
-                <p>Advisor of R&D</p>
-                <div class="personaldetail">Personal Detail</div>
+                <h3>Đàm Quang Trung</h3>
+                <p>Cố vấn nghiên cứu và phát triển</p>
+                <div class="personaldetail">Thông tin cá nhân</div>
             </div>
 
             <!--Chau Anh-->
@@ -62,9 +62,9 @@
                 <div class="img-container">
                     <img src="{{ url_for('static', filename='img/aboutus/headrd.jpg') }}" alt="Miss Do Pham Chau Giang - Lead of HR">
                 </div>
-                <h3>Ngo Chau Anh</h3>
-                <p>Head of RD</p>
-                <div class="personaldetail">Personal Detail</div>
+                <h3>Ngô Châu Anh</h3>
+                <p>Giám đốc nghiên cứu và phát triển</p>
+                <div class="personaldetail">Thông tin cá nhân</div>
                 <div class="icons"></div>
             </div>
 
@@ -73,9 +73,9 @@
                 <div class="img-container">
                     <img src="{{ url_for('static', filename='img/aboutus/headhr.jpg') }}" alt="Miss Do Pham Chau Giang - Lead of HR">
                 </div>
-                <h3>Do Pham Chau Giang</h3>
-                <p>Head of HR</p>
-                <div class="personaldetail">Personal Detail</div>
+                <h3>Đỗ Phạm Châu Giang</h3>
+                <p>Giám đốc nhân sự</p>
+                <div class="personaldetail">Thông tin cá nhân</div>
                 <div class="icons"></div>
             </div>
         </div>
@@ -86,9 +86,9 @@
                 <div class="img-container">
                     <img src="{{ url_for('static', filename='img/aboutus/vicebus_1.jpg') }}" alt="Miss Do Pham Chau Giang - Lead of HR">
                 </div>
-                <h3>Hoang Tu Uyen</h3>
-                <p>Vice Head of Business</p>
-                <div class="personaldetail">Personal Detail</div>
+                <h3>Hoàng Tú Uyên</h3>
+                <p>Phó giám đốc kinh doanh</p>
+                <div class="personaldetail">Thông tin cá nhân</div>
                 <div class="icons"></div>
             </div>
 
@@ -97,9 +97,9 @@
                 <div class="img-container">
                     <img src="{{ url_for('static', filename='img/aboutus/headbus.jpg') }}" alt="Miss Do Pham Chau Giang - Lead of HR">
                 </div>
-                <h3>Luu Phan Phuong Linh</h3>
-                <p>Head of Business</p>
-                <div class="personaldetail">Personal Detail</div>
+                <h3>Lưu Phan Phương Linh</h3>
+                <p>Giám đốc kinh doanh</p>
+                <div class="personaldetail">Thông tin cá nhân</div>
                 <div class="icons"></div>
             </div>
 
@@ -108,9 +108,9 @@
                 <div class="img-container">
                     <img src="{{ url_for('static', filename='img/aboutus/vicebus_2.jpg') }}" alt="Miss Do Pham Chau Giang - Lead of HR">
                 </div>
-                <h3>Vu Phuong Thao</h3>
-                <p>Vice Head of Business</p>
-                <div class="personaldetail">Personal Detail</div>
+                <h3>Vũ Phương Thảo</h3>
+                <p>Phó giám đốc kinh doanh</p>
+                <div class="personaldetail">Thông tin cá nhân</div>
                 <div class="icons"></div>
             </div>
         </div>
@@ -121,9 +121,9 @@
                 <div class="img-container">
                     <img src="{{ url_for('static', filename='img/aboutus/vicemarcom_1.jpg') }}" alt="Miss Do Pham Chau Giang - Lead of HR">
                 </div>
-                <h3>Hoang Hieu Minh</h3>
-                <p>Vice Head of Marketing/Communication</p>
-                <div class="personaldetail">Personal Detail</div>
+                <h3>Hoàng Hiểu Minh</h3>
+                <p>Phó giám đốc truyền thông/ tiếp thị</p>
+                <div class="personaldetail">Thông tin cá nhân</div>
                 <div class="icons"></div>
             </div>
 
@@ -132,9 +132,9 @@
                 <div class="img-container">
                     <img src="{{ url_for('static', filename='img/aboutus/headmarcom.jpg') }}" alt="Miss Do Pham Chau Giang - Lead of HR">
                 </div>
-                <h3>Nguyen Minh Khue</h3>
-                <p>Head of Marketing/Communication</p>
-                <div class="personaldetail">Personal Detail</div>
+                <h3>Nguyễn Minh Khuê</h3>
+                <p>Giám đốc truyền thông/ tiếp thị</p>
+                <div class="personaldetail">Thông tin cá nhân</div>
                 <div class="icons"></div>
             </div>
 
@@ -143,9 +143,9 @@
                 <div class="img-container">
                     <img src="{{ url_for('static', filename='img/aboutus/vicemarcom_2.jpg') }}" alt="Miss Do Pham Chau Giang - Lead of HR">
                 </div>
-                <h3>Le Nguyen Viet Anh</h3>
-                <p>Vice Head of Marketing/Communication</p>
-                <div class="personaldetail">Personal Detail</div>
+                <h3>Lê Nguyễn Việt Anh</h3>
+                <p>Phó giám đốc truyền thông/ tiếp thị</p>
+                <div class="personaldetail">Thông tin cá nhân</div>
                 <div class="icons"></div>
             </div>
         </div>
@@ -156,9 +156,9 @@
                 <div class="img-container">
                     <img src="{{ url_for('static', filename='img/aboutus/viceit_1.jpg') }}" alt="Giang Pham">
                 </div>
-                <h3>Pham Ninh Giang</h3>
-                <p>Vice Head of IT</p>
-                <div class="personaldetail">Personal Detail</div>
+                <h3>Phạm Ninh Giang</h3>
+                <p>Phó giám đốc công nghệ thông tin</p>
+                <div class="personaldetail">Thông tin cá nhân</div>
                 <div class="icons"></div>
             </div>
 
@@ -167,9 +167,9 @@
                 <div class="img-container">
                     <img src="{{ url_for('static', filename='img/aboutus/headit.jpg') }}" alt="Miss Do Pham Chau Giang - Lead of HR">
                 </div>
-                <h3>Huynh Le Diem Qui</h3>
-                <p>Head of IT</p>
-                <div class="personaldetail">Personal Detail</div>
+                <h3>Huỳnh Lê Diễm Quí</h3>
+                <p>Giám đốc công nghệ thông tin</p>
+                <div class="personaldetail">Thông tin cá nhân</div>
                 <div class="icons"></div>
             </div>
 
@@ -178,9 +178,9 @@
                 <div class="img-container">
                     <img src="{{ url_for('static', filename='img/aboutus/viceit_2.jpg') }}" alt="Miss Do Pham Chau Giang - Lead of HR">
                 </div>
-                <h3>Kieu Minh Duc</h3>
-                <p>Vice Head of IT</p>
-                <div class="personaldetail">Personal Detail</div>
+                <h3>Kiều Minh Đức</h3>
+                <p>Phó giám đốc công nghệ thông tin</p>
+                <div class="personaldetail">Thông tin cá nhân</div>
                 <div class="icons"></div>
             </div>
         </div>
