--- a/project/templates/aboutus.html
+++ b/project/templates/aboutus.html
@@ -62,62 +62,45 @@
             </figure>
             <hr class="aboutus-hr">
             <p class = "statementfromTri">
-              To form and develop a project, the contribution of the chairman is
-              extremely important. Today, let's follow us to learn about the
-              leader of Eco Smart Vietnam - Mr. Bui Dinh Tri through the small
-              interview below as well as understand more interesting information
-              about Eco Smart home. Let's get started.
+              Để hình thành và phát triển một dự án, sự đóng góp của tổng giám đốc là
+              vô cùng quan trọng. Hôm nay hãy cùng chúng tôi tìm hiểu về
+              người sáng lập ra Eco Smart Việt Nam - anh Bùi Đình Trí qua những thông tin
+              phỏng vấn dưới đây để hiểu thêm nhiều thông tin thú vị
+              về Eco Smart. Hãy bắt đầu nào!
             </p>
             <p class="question">
-              Question 1: Introduce yourself and tell 3 interesting things about
-              yourself.
+              Câu 1: Giới thiệu và kể 3 điều thú vị về
+              bản thân anh.
             </p>
             <p class = "answer">
-              Mr. Tri: I am currently an overseas student studying 2 majors:
-              Computer Science and Economics in the US. Three interesting things
-              about me are probably that I am left-handed, high-dose (but
-              reckless and in control) and lazy to study (but still learn well).
+              Anh Trí: Hiện tại tôi đang là du học sinh học 2 chuyên ngành
+              Khoa học Máy tính và Kinh tế ở Mỹ. Ba điều thú vị
+              về tôi có lẽ là tôi thuận tay trái, liều lĩnh (nhưng
+              trong tầm kiểm soát) và lười học (nhưng vẫn học tốt).
             </p>
             <p class="question">
-              Question 2: Mr Tri, what was the fate that motivated you to found
-              Eco Smart Vietnam?
+              Câu 2: Anh Trí, cơ duyên nào đã đưa anh đến với việc thành lập
+              Eco Smart Việt Nam?
             </p>
             <p class ="answer">
-              Mr. Tri: The charm probably stems from my participation in one of
-              the annual activities of my school's Young Entrepreneurs and
-              Entrepreneurship Support Center, it is the Macalester
-              Entrepreneurship and Innovation Department that rewards young
-              people with ideas, special initiatives that help improve the lives
-              of the communities around them. I was lucky to win the award and
-              Eco Smart Vietnam was the idea that helped me win that award (the
-              original name was Eco Heroes Campaign).
+              Anh Trí: Cái duyên có lẽ bắt nguồn từ việc tôi tham gia một trong những
+              hoạt động thường niên của Trung tâm hỗ trợ khởi nghiệp dành cho doanh nhân và doanh nghiệp trẻ của trường tôi. Ban Khởi nghiệp và Đổi mới Sáng tạo của Macalester trao thưởng cho các bạn trẻ có ý tưởng, sáng kiến đặc biệt giúp cải thiện cuộc sống của cộng đồng xung quanh họ. Tôi đã may mắn giành được giải thưởng và Eco Smart Việt Nam là ý tưởng đã giúp tôi giành được giải thưởng đó (giải thưởng có tên ban đầu là Eco Heroes Campaign).
             </p>
             <p class="question">
-              Question 3: Could you share a little about the goals and
-              expectations that you set at Eco Smart Vietnam in the future?
+              Câu hỏi 3: Anh có thể chia sẻ một chút về mục tiêu và
+               kỳ vọng mà bạn đặt ra tại Eco Smart Việt Nam trong tương lai?
             </p>
             <p class = "answer">
-              Mr. Tri: As I share, I am a high-dose blood person but in control,
-              so I set goals/expectations that often balance between far-fetched
-              and realistic. I really expect Eco Smart Vietnam to become one of
-              the largest and most professional environmental organizations in
-              the North. However, in my mind, I think that in the short term, it
-              only needs to be the largest in Hanoi (probably the largest HN is
-              likely to be top 2, top 3 in the North, right?
+              Anh Trí: Như tôi chia sẻ, tôi là người có máu liều lĩnh nhưng trong tầm kiểm soát, vì vậy mục tiêu và kỳ vọng của tôi thường cân bằng giữa những điều xa vời và thực tế. Tôi thực sự kỳ vọng Eco Smart Việt Nam sẽ trở thành một trong những tổ chức môi trường lớn nhất và chuyên nghiệp nhất ở khu vực miền Bắc. Tuy nhiên, trước mắt, Eco Smart chỉ cần lớn nhất ở trong Hà Nội thôi đã (chắc là lớn nhất trong Hà Nội là đứng thứ 2 hoặc thứ 3 toàn miền Bắc nhỉ?)
             </p>
             <p class="question">
-              Question 4: Do you have anything to say to readers and followers
-              of the project?
+              Câu hỏi 4: Anh có điều gì muốn nói với độc giả và những người theo dõi của dự án không?
             </p>
             <p class ="answer">
-              Mr. Tri: My message is: "Eco Smart Vietnam will be a project that
-              will not let followers and expectations down because with the Eco
-              Smart team - the team I believe is full of talented and
-              responsible people - will be able to help the project grow and
-              spread far and wide. In addition, a small promise is that Eco
-              Smart Vietnam will always try its best to fulfill the mission that
-              we set out: Acting for the development and safety of the
-              environment in Vietnam!”
+              Anh Trí: Tôi chỉ muốn nói rằng Eco Smart Vietnam là một dự án
+              sẽ không mọi người phải thất vọng bởi vì với đội ngũ của Eco
+              Smart chúng tôi - những người mà tôi tin là đầy tài năng và
+              trách nhiệm - sẽ có thể giúp dự án phát triển và lan tỏa rộng rãi. Ngoài ra, chúng tôi cũng xin được cam kết là Eco Smart Việt Nam sẽ luôn nỗ lực hết mình để hoàn thành sứ mệnh mà chính chúng tôi đặt ra: Hành động vì sự phát triển và an toàn của môi trường Việt Nam!”
             </p>
             <hr>
           </div>
