--- a/project/templates/footer.html
+++ b/project/templates/footer.html
@@ -12,7 +12,7 @@
 <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
 <div class="background_footer">
   <p class="footer-style">
-    All rights reserved by
+    Bản quyền thuộc về
     <a class="footer-href" href="https://www.facebook.com/ecosmartvietnam"
       >ECO SMART VIETNAM</a
     >
@@ -48,12 +48,12 @@
 
 <div class="loader">
   <div class="spinner-grow text-primary" role="status">
-    <span class="visually-hidden">Loading...</span>
+    <span class="visually-hidden">Đang tải...</span>
   </div>
   <div class="spinner-grow text-secondary" role="status">
-    <span class="visually-hidden">Loading...</span>
+    <span class="visually-hidden">Đang tải...</span>
   </div>
   <div class="spinner-grow text-success" role="status">
-    <span class="visually-hidden">Loading...</span>
+    <span class="visually-hidden">Đang tải...</span>
   </div>
 </div>
