--- a/project/templates/navbar.html
+++ b/project/templates/navbar.html
@@ -68,24 +68,24 @@
           <!-- The list is right-aligned (ms-auto)  -->
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0" id="nav-list">
             <li class="nav-item">
-              <a class="nav-link" href="/">Home </a>
+              <a class="nav-link" href="/">Trang chủ </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/product/">Products </a>
+              <a class="nav-link" href="/product/">Sản Phẩm </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/activities/">Activities </a>
+              <a class="nav-link" href="/activities/">Hoạt Động </a>
             </li>
 
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="/about-us/"
-                >About Us
+                >Về Chúng Tôi
               </a>
             </li>
 
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="/contact-us/"
-                >Contact Us
+                >Liên Hệ
               </a>
             </li>
 
