contact us translated to vnamese

--- a/project/templates/contactus.html
+++ b/project/templates/contactus.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Us</title>
+    <title>Liên hệ</title>
     <link
       rel="icon"
       href="{{ url_for('static', filename='img/aboutus/logo2.png') }}"
@@ -47,19 +47,19 @@
 
     <div class="contact-us-body">
       <div class="content-left flex-item">
-        <h1 class="scripts1">Let's chat.</h1>
-        <h2 class="scripts2">We want to hear from you!</h2>
+        <h1 class="scripts1">Hãy trò chuyện.</h1>
+        <h2 class="scripts2">Chúng tôi muốn lắng nghe bạn!</h2>
       </div>
 
       <div class="content-right flex-item">
         <form class="contact-box" id="contact-form">
-          <h2 class="word">Send us a message!</h2>
+          <h2 class="word">Mục gửi thư</h2>
 
           <input
             class="contact-item"
             type="text"
             name="from_name"
-            placeholder="Your Name*"
+            placeholder="Họ Tên*"
             required
           />
           <br />
@@ -77,11 +77,11 @@
             class="contact-item"
             name="message"
             id="messagebox"
-            placeholder="Message*"
+            placeholder="Lời nhắn*"
             required
           ></textarea>
           <br />
-          <input type="submit" class="button" value="Send" id="send-btn" />
+          <input type="submit" class="button" value="Gửi" id="send-btn" />
         </form>
       </div>
     </div>
