--- a/project/static/css/product.css
+++ b/project/static/css/product.css
@@ -111,9 +111,9 @@ scale: 1;
   justify-content:center;
 }
 .head1 h1 {
-  font-size: 5vh;
+  font-size: 6vh;
   font-weight: bolder;
-  color: #E5D9B6;
+  color: #FCF5E5;
 }
 .head1 h1:hover {
   transform: scale(1.2)
