updated translation aboutus

--- a/project/templates/aboutus.html
+++ b/project/templates/aboutus.html
@@ -32,21 +32,21 @@
     {% include 'navbar.html' %}
     <div class="bodystyle">
       <div class="head1">
-        <h1>About Us</h1>
+        <h1>Về chúng tôi</h1>
       </div>
 
       <div>
         <div class="mainstyle">
           <!-- Including: Awareness, Mission & Vision, Founder -->
-          <h2 class="head2awareness">Awareness, Mission and Vision</h2>
+          <h2 class="head2awareness">Nhận thức, sứ mệnh và tầm nhìn</h2>
         </div>
 
         {% include 'animation.html' %}
 
         <div class="mainstyle">
-          <h2 class="head2executive">Executive Board</h2>
+          <h2 class="head2executive">Ban điều hành</h2>
           {% include 'ourteam.html' %}
-          <h2 class="head2ourteam">The Story of Eco Smart Vietnam</h2>
+          <h2 class="head2ourteam">Câu chuyện của Eco Smart Việt Nam</h2>
           <!-- Founder Content -->
           <div class="interview">
             <figure>
@@ -57,7 +57,7 @@
               />
               <!-- <img class="caption" src="../assets/pics/aboutus/founder.jpg" alt="Founder" /> -->
               <figcaption class="founder_pic">
-                Founder of Eco Smart Vietnam - Mr Bui Dinh Tri
+                Người sáng lập Eco Smart Việt Nam - Mr. Bùi Đình Trí
               </figcaption>
             </figure>
             <hr class="aboutus-hr">
